[package]
name = "lock-diff"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
pager = "0.16.1"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
