[package]
name = "lock-diff"
version = "0.1.0"
edition = "2021"
authors = ["José Duarte <duarte.gmj@gmail.com>"]
license-file = "LICENSE"
description = "Diff between `Cargo.lock`"
documentation = "https://docs.rs/lock-diff"
readme = "README.md"
repository = "https://github.com/jmg-duarte/lock-diff"
categories = ["lockfile", "cli", "diff"]
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
pager = "0.16.1"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
